--- a/install/kubernetes/cilium/values.yaml
+++ b/install/kubernetes/cilium/values.yaml
@@ -125,11 +125,11 @@ rollOutCiliumPods: false
 image:
   override: ~
   repository: "quay.io/cilium/cilium"
-  tag: "v1.13.9"
+  tag: "v1.13.10"
   pullPolicy: "IfNotPresent"
   # cilium-digest
-  digest: "sha256:859d4390df6f683479e83c8b8d69b0e52eb893d6a9ba36e8bbb4d6ec9be03c42"
-  useDigest: true
+  digest: ""
+  useDigest: false
 
 # -- Affinity for cilium-agent.
 affinity:
@@ -1041,10 +1041,10 @@ hubble:
     image:
       override: ~
       repository: "quay.io/cilium/hubble-relay"
-      tag: "v1.13.9"
+      tag: "v1.13.10"
        # hubble-relay-digest
-      digest: "sha256:c2ce5b36535acc70d3425fa51844560094030d0a00c8853d721a0a56a7bf5ed3"
-      useDigest: true
+      digest: ""
+      useDigest: false
       pullPolicy: "IfNotPresent"
 
     # -- Specifies the resources for the hubble-relay pods
@@ -1898,16 +1898,16 @@ operator:
   image:
     override: ~
     repository: "quay.io/cilium/operator"
-    tag: "v1.13.9"
+    tag: "v1.13.10"
     # operator-generic-digest
-    genericDigest: "sha256:b4cce66722ec4962c19518a6b1117d1e93a283835b208adb082b60e9cb3cf398"
+    genericDigest: ""
     # operator-azure-digest
-    azureDigest: "sha256:df41fdfe072b525dcfce23faf4cf4612690672b09b5b008102af2609e8eb6981"
+    azureDigest: ""
     # operator-aws-digest
-    awsDigest: "sha256:cb6ef13809a320c6580ca14b91d9a34195e8b76f0afaa13763e9ea0c03a9ce4d"
+    awsDigest: ""
     # operator-alibabacloud-digest
-    alibabacloudDigest: "sha256:fce2b4d6c5b1c2dc221a221d051c88613892ca7e7c0c1f57222309fa87d507a7"
-    useDigest: true
+    alibabacloudDigest: ""
+    useDigest: false
     pullPolicy: "IfNotPresent"
     suffix: ""
 
@@ -2161,10 +2161,10 @@ preflight:
   image:
     override: ~
     repository: "quay.io/cilium/cilium"
-    tag: "v1.13.9"
+    tag: "v1.13.10"
     # cilium-digest
-    digest: "sha256:859d4390df6f683479e83c8b8d69b0e52eb893d6a9ba36e8bbb4d6ec9be03c42"
-    useDigest: true
+    digest: ""
+    useDigest: false
     pullPolicy: "IfNotPresent"
 
   # -- The priority class to use for the preflight pod.
@@ -2308,10 +2308,10 @@ clustermesh:
     image:
       override: ~
       repository: "quay.io/cilium/clustermesh-apiserver"
-      tag: "v1.13.9"
+      tag: "v1.13.10"
       # clustermesh-apiserver-digest
-      digest: "sha256:fc5f20f95a0684c364e606c4a13e4b0ab6869ce7abdaf5a1316c5cb9ecb25bf9"
-      useDigest: true
+      digest: ""
+      useDigest: false
       pullPolicy: "IfNotPresent"
 
     etcd:
