install: Update image digests for v1.14.5
Generated from https://github.com/cilium/cilium/actions/runs/7170425815.

`docker.io/cilium/cilium:v1.14.5@sha256:d3b287029755b6a47dee01420e2ea469469f1b174a2089c10af7e5e9289ef05b`
`quay.io/cilium/cilium:v1.14.5@sha256:d3b287029755b6a47dee01420e2ea469469f1b174a2089c10af7e5e9289ef05b`
`docker.io/cilium/cilium:stable@sha256:d3b287029755b6a47dee01420e2ea469469f1b174a2089c10af7e5e9289ef05b`
`quay.io/cilium/cilium:stable@sha256:d3b287029755b6a47dee01420e2ea469469f1b174a2089c10af7e5e9289ef05b`

`docker.io/cilium/clustermesh-apiserver:v1.14.5@sha256:7eaa35cf5452c43b1f7d0cde0d707823ae7e49965bcb54c053e31ea4e04c3d96`
`quay.io/cilium/clustermesh-apiserver:v1.14.5@sha256:7eaa35cf5452c43b1f7d0cde0d707823ae7e49965bcb54c053e31ea4e04c3d96`
`docker.io/cilium/clustermesh-apiserver:stable@sha256:7eaa35cf5452c43b1f7d0cde0d707823ae7e49965bcb54c053e31ea4e04c3d96`
`quay.io/cilium/clustermesh-apiserver:stable@sha256:7eaa35cf5452c43b1f7d0cde0d707823ae7e49965bcb54c053e31ea4e04c3d96`

`docker.io/cilium/docker-plugin:v1.14.5@sha256:45c59f853c22997f811a35b01b2a6520d9d6d537c99a54267f0a70b64bd8ea9c`
`quay.io/cilium/docker-plugin:v1.14.5@sha256:45c59f853c22997f811a35b01b2a6520d9d6d537c99a54267f0a70b64bd8ea9c`
`docker.io/cilium/docker-plugin:stable@sha256:45c59f853c22997f811a35b01b2a6520d9d6d537c99a54267f0a70b64bd8ea9c`
`quay.io/cilium/docker-plugin:stable@sha256:45c59f853c22997f811a35b01b2a6520d9d6d537c99a54267f0a70b64bd8ea9c`

`docker.io/cilium/hubble-relay:v1.14.5@sha256:dbef89f924a927043d02b40c18e417c1ea0e8f58b44523b80fef7e3652db24d4`
`quay.io/cilium/hubble-relay:v1.14.5@sha256:dbef89f924a927043d02b40c18e417c1ea0e8f58b44523b80fef7e3652db24d4`
`docker.io/cilium/hubble-relay:stable@sha256:dbef89f924a927043d02b40c18e417c1ea0e8f58b44523b80fef7e3652db24d4`
`quay.io/cilium/hubble-relay:stable@sha256:dbef89f924a927043d02b40c18e417c1ea0e8f58b44523b80fef7e3652db24d4`

`docker.io/cilium/kvstoremesh:v1.14.5@sha256:d7137edd0efa2b1407b20088af3980a9993bb616d85bf9b55ea

--- a/install/kubernetes/Makefile.digests
+++ b/install/kubernetes/Makefile.digests
@@ -2,13 +2,13 @@
 # Copyright 2023 Authors of Cilium
 # SPDX-License-Identifier: Apache-2.0
 
-export CILIUM_DIGEST := ""
-export CLUSTERMESH_APISERVER_DIGEST := ""
-export DOCKER_PLUGIN_DIGEST := ""
-export HUBBLE_RELAY_DIGEST := ""
-export KVSTOREMESH_DIGEST := ""
-export OPERATOR_ALIBABACLOUD_DIGEST := ""
-export OPERATOR_AWS_DIGEST := ""
-export OPERATOR_AZURE_DIGEST := ""
-export OPERATOR_GENERIC_DIGEST := ""
-export OPERATOR_DIGEST := ""
+export CILIUM_DIGEST := "sha256:d3b287029755b6a47dee01420e2ea469469f1b174a2089c10af7e5e9289ef05b"
+export CLUSTERMESH_APISERVER_DIGEST := "sha256:7eaa35cf5452c43b1f7d0cde0d707823ae7e49965bcb54c053e31ea4e04c3d96"
+export DOCKER_PLUGIN_DIGEST := "sha256:45c59f853c22997f811a35b01b2a6520d9d6d537c99a54267f0a70b64bd8ea9c"
+export HUBBLE_RELAY_DIGEST := "sha256:dbef89f924a927043d02b40c18e417c1ea0e8f58b44523b80fef7e3652db24d4"
+export KVSTOREMESH_DIGEST := "sha256:d7137edd0efa2b1407b20088af3980a9993bb616d85bf9b55ea2891d1b99023a"
+export OPERATOR_ALIBABACLOUD_DIGEST := "sha256:e0152c498ba73c56a82eee2a706c8f400e9a6999c665af31a935bdf08e659bc3"
+export OPERATOR_AWS_DIGEST := "sha256:785ccf1267d0ed3ba9e4bd8166577cb4f9e4ce996af26b27c9d5c554a0d5b09a"
+export OPERATOR_AZURE_DIGEST := "sha256:9203f5583aa34e716d7a6588ebd144e43ce3b77873f578fc12b2679e33591353"
+export OPERATOR_GENERIC_DIGEST := "sha256:303f9076bdc73b3fc32aaedee64a14f6f44c8bb08ee9e3956d443021103ebe7a"
+export OPERATOR_DIGEST := "sha256:234c177b6f4261405d9dfa2c50ce253bee1edd8147cfba0adbc22a57235d3b68"
