--- a/install/kubernetes/Makefile.digests
+++ b/install/kubernetes/Makefile.digests
@@ -2,12 +2,12 @@
 # Copyright 2023 Authors of Cilium
 # SPDX-License-Identifier: Apache-2.0
 
-export CILIUM_DIGEST := ""
-export CLUSTERMESH_APISERVER_DIGEST := ""
-export DOCKER_PLUGIN_DIGEST := ""
-export HUBBLE_RELAY_DIGEST := ""
-export OPERATOR_ALIBABACLOUD_DIGEST := ""
-export OPERATOR_AWS_DIGEST := ""
-export OPERATOR_AZURE_DIGEST := ""
-export OPERATOR_GENERIC_DIGEST := ""
-export OPERATOR_DIGEST := ""
+export CILIUM_DIGEST := "sha256:aff23a5d4daf06623d10f7ff6a8a7b617c22c1f8d63f507fd33ef3a80ba4779f"
+export CLUSTERMESH_APISERVER_DIGEST := "sha256:e2049922fc00b6abe70ccdedf6b8130c80612ea1675a36d5b8492723d55134f5"
+export DOCKER_PLUGIN_DIGEST := "sha256:d317a09affcc5c5750792f9de71406be63344ff5420ed3155e527e67224650ee"
+export HUBBLE_RELAY_DIGEST := "sha256:02702a6f1e3bbe4ebcd2fc5148e0f3f0fe170083170bd4109804ed5a269285c7"
+export OPERATOR_ALIBABACLOUD_DIGEST := "sha256:98c7b4a99b051dea49a24811369eb4e5d6ceea56f0b93ee94637f99089a2e412"
+export OPERATOR_AWS_DIGEST := "sha256:e9f629971442d5f609e277775ff17fa4c65163cc890ddd77125169183b4e5982"
+export OPERATOR_AZURE_DIGEST := "sha256:d02685fa11002c8920b86ce8a5a03ae95290c33a14d4e9f8d63cc4c8aa477f81"
+export OPERATOR_GENERIC_DIGEST := "sha256:257a9fe37f0e689852cc899b32e5beae80ae574c7e3fcb9a6489973fe5301c99"
+export OPERATOR_DIGEST := "sha256:1b51da9c4fa162f2efe470a3e8a0128ebbdb48821d7dd818216b063b89e06705"
