--- a/install/kubernetes/cilium/values.yaml
+++ b/install/kubernetes/cilium/values.yaml
@@ -113,8 +113,8 @@ image:
   tag: "v1.12.17"
   pullPolicy: "IfNotPresent"
   # cilium-digest
-  digest: ""
-  useDigest: false
+  digest: "sha256:323e5762a2412e4f274c34ffb655d57b439d3c057ada48167f8aa038729c1661"
+  useDigest: true
 
 # -- Affinity for cilium-agent.
 affinity:
@@ -850,8 +850,8 @@ hubble:
       repository: "quay.io/cilium/hubble-relay"
       tag: "v1.12.17"
        # hubble-relay-digest
-      digest: ""
-      useDigest: false
+      digest: "sha256:4387d06a9c0089de6a27d815a9a475f539b2f9eaf6ec7d95d1670b502e18f7ea"
+      useDigest: true
       pullPolicy: "IfNotPresent"
 
     # -- Specifies the resources for the hubble-relay pods
@@ -1650,14 +1650,14 @@ operator:
     repository: "quay.io/cilium/operator"
     tag: "v1.12.17"
     # operator-generic-digest
-    genericDigest: ""
+    genericDigest: "sha256:17a1b1cbc38bcce00fd4d793c7b6ab630fdaaa464d53e05967625c7b7306730d"
     # operator-azure-digest
-    azureDigest: ""
+    azureDigest: "sha256:a1f1151454586b7aa7e93564975074d861d8020cb52bd82a565ce645ab671645"
     # operator-aws-digest
-    awsDigest: ""
+    awsDigest: "sha256:aa2ba6331ec84e64f46205dbd9043a69b89f2eb177bbd29d7c5c88a052809cb0"
     # operator-alibabacloud-digest
-    alibabacloudDigest: ""
-    useDigest: false
+    alibabacloudDigest: "sha256:06e7a741d4b74790dc8c9fcc594608630517cc7366e4d4ba97eef7133bd94bfb"
+    useDigest: true
     pullPolicy: "IfNotPresent"
     suffix: ""
 
@@ -1907,8 +1907,8 @@ preflight:
     repository: "quay.io/cilium/cilium"
     tag: "v1.12.17"
     # cilium-digest
-    digest: ""
-    useDigest: false
+    digest: "sha256:323e5762a2412e4f274c34ffb655d57b439d3c057ada48167f8aa038729c1661"
+    useDigest: true
     pullPolicy: "IfNotPresent"
 
   # -- The priority class to use for the preflight pod.
@@ -2053,8 +2053,8 @@ clustermesh:
       repository: "quay.io/cilium/clustermesh-apiserver"
       tag: "v1.12.17"
       # clustermesh-apiserver-digest
-      digest: ""
-      useDigest: false
+      digest: "sha256:7bf626ebaafeaf51870f9f5dc4d5127797da97ab5365405cccadb480dae900cf"
+      useDigest: true
       pullPolicy: "IfNotPresent"
 
     etcd:
