--- a/.github/workflows/tests-e2e-upgrade.yaml
+++ b/.github/workflows/tests-e2e-upgrade.yaml
@@ -133,7 +133,7 @@ jobs:
             kpr: 'strict'
             tunnel: 'vxlan'
             lb-mode: 'snat'
-            egress-gateway: 'true'
+            egress-gateway: 'false'
             host-fw: 'true'
             lb-acceleration: 'testing-only'
             ingress-controller: 'true'
