--- a/.github/workflows/tests-e2e-upgrade.yaml
+++ b/.github/workflows/tests-e2e-upgrade.yaml
@@ -143,8 +143,8 @@ jobs:
             kernel: 'bpf-next-20231205.012941'
             kube-proxy: 'none'
             kpr: 'strict'
-            devices: '{eth0,eth1}'
-            secondary-network: 'true'
+              #devices: '{eth0,eth1}'
+              #secondary-network: 'true'
             tunnel: 'disabled'
             lb-mode: 'snat'
             egress-gateway: 'false'
@@ -156,7 +156,7 @@ jobs:
             kernel: 'bpf-next-20231205.012941'
             kube-proxy: 'iptables'
             kpr: 'disabled'
-            tunnel: 'geneve'
+            tunnel: 'vxlan'
             endpoint-routes: 'true'
 
               #- name: '9'
@@ -220,8 +220,8 @@ jobs:
             kernel: '5.4-20231124.100406'
             kube-proxy: 'iptables'
             kpr: 'strict'
-            devices: '{eth0,eth1}'
-            secondary-network: 'true'
+              #devices: '{eth0,eth1}'
+              #secondary-network: 'true'
             tunnel: 'vxlan'
             lb-mode: 'snat'
             egress-gateway: 'false'
