CODEOWNERS: Add sig-scalability team to CODEOWNERS
Signed-off-by: Marcel Zieba <marcel.zieba@isovalent.com>

--- a/CODEOWNERS
+++ b/CODEOWNERS
@@ -207,6 +207,9 @@
 #   Responsible for all policy logic from Kubernetes down to eBPF policymap
 #   entries, including all intermediate layers such as the Policy Repository,
 #   SelectorCache, PolicyCache, CachedSelectorPolicy, EndpointPolicy, etc.
+# - @cilium/sig-scalability:
+#   Maintain scalability and performance tests. Provide input on scalability
+#   and performance related changes.
 # - @cilium/sig-servicemesh:
 #   Provide input on the way that Service Mesh constructs such as Gateway API
 #   are converted into lower-level constructs backed by eBPF or Envoy
